# pickitDemo

./: README.md
demo/launch/: environment.launch
demo_factory_flexbe_states/: CMakeLists.txt  package.xml  setup.py
demo_factory_flexbe_states/src/demo_factory_flexbe_states/: detect_part_camera_state.py  set_conveyor_power_state.py  vacuum_gripper_control_state.py
demo_gazebo/worlds/: demo.world
demo_support/config/: demo.rviz
demo_support/urdf/: demo.xacro
flexbe_manipulation_states/src/flexbe_manipulation_states/: srdf_state_to_moveit.py
im_pickit_msgs/: CMakeLists.txt  package.xml
im_pickit_msgs/action/: GetReferenceFrame.action
im_pickit_msgs/include/im_pickit_msgs/: common.h
im_pickit_msgs/include/im_pickit_msgs/plugin/: BoundingBox.h  ColorRangeHSV.h  ColorRangeRGB.h
im_pickit_msgs/msg/: BlacklistedPick.msg  BlacklistedPickArray.msg  CalibrationStatus.msg  FolderContent.msg  Model.msg  ModelsData.msg  MonitoringEvent.msg  Object.msg  ObjectArray.msg  ObjectModel.msg  ObjectPickFrame.msg  ObjectPickFrameSymmetry.msg  ObjectPickFrames.msg  RegionOfInterest.msg  Reliability.msg  SnapshotStatus.msg  StatusInvalid.msg  StatusUnpickable.msg  TeachXDModelsData.msg  ToolModels.msg
im_pickit_msgs/srv/: AddBlacklistedPick.srv  AddMeshTool.srv  AddShapeModel.srv  BackupConfigurations.srv  CaptureImage.srv  CheckForObjects.srv  ConstructTeachXdModel.srv  CopyConfiguration.srv  CreateConfiguration.srv  DetectTeachXdBoxMasks.srv  EditConfigurationFiles.srv  IntArg.srv  LoadSnapshot.srv  ModelData.srv  ModelXdData.srv  ProcessImage.srv  RestoreConfigurations.srv  SaveActiveConfiguration.srv  SaveCameraSettings.srv  SaveConfiguration.srv  SaveSnapshot.srv  SetObjectPickFrames.srv  SetShapePickFrames.srv  SetToolModels.srv  SetTransform.srv  TeachFromCad.srv  TeachRoi.srv
pickit/: CMakeLists.txt  package.xml
pickit/scripts/: pickit_example.py
pickit_flexbe_behaviors/: README.md
pickit_flexbe_behaviors/pickit_flexbe_flexbe_behaviors/: CMakeLists.txt  package.xml  setup.py
pickit_flexbe_behaviors/pickit_flexbe_flexbe_behaviors/manifest/: example_behavior.xml  pickit_demo.xml  pickit_demo_capture_image_and_process_image.xml  pickit_demo_check_for_objects.xml
pickit_flexbe_behaviors/pickit_flexbe_flexbe_behaviors/src/pickit_flexbe_flexbe_behaviors/: pickit_demo_capture_image_and_process_image_sm.py  pickit_demo_check_for_objects_sm.py  pickit_demo_sm.py
pickit_flexbe_behaviors/pickit_flexbe_flexbe_states/: CMakeLists.txt  package.xml  setup.py
pickit_flexbe_behaviors/pickit_flexbe_flexbe_states/src/pickit_flexbe_flexbe_states/: pickit_capture_image_state.py  pickit_check_for_objects_state.py  pickit_get_object_keys_state.py  pickit_load_product_state.py  pickit_load_setup_state.py  pickit_process_image_state.py  pickit_select_object_state.py  tf2_transform_broadcaster_state.py
pickit_model/: CMakeLists.txt  camera_display.dae  camera_hull.dae  package.xml
pickit_model/camera_description/urdf/: pickit_camera_description.xacro  pickit_camera_description.xacro.urdf
pickit_model/config/: rviz_config.rviz
pickit_model/launch/: environment.launch
pickit_modelx/: pickit_camera_description.urdf
