<package format="2">
  <name>im_pickit_msgs</name>
  <version>2.0.0</version>
  <description>The im_pickit_msgs package</description>

  <maintainer email="info@intermodalics.eu">Intermodalics BVBA</maintainer>
  <license>Closed</license>

  <url type="website">http://www.pickit3d.com/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>sensor_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>visualization_msgs</depend>
</package>
