<package>
  <name>pickit_flexbe_flexbe_states</name>
  <version>1.0.0</version>
  <description>
     pickit_flexbe_flexbe_states provides a collection of custom states.
     Feel free to add new states.
  </description>
  <maintainer email="todo@todo.com">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>im_pickit_msgs</build_depend>

  <run_depend>rospy</run_depend>

  <run_depend>flexbe_core</run_depend>

  <export>
    <flexbe_states />
  </export>

</package>
